# ImageGPT

./: .env.example  .gitignore  README.md  README.zh-CN.md  TASKS.md
.github/workflows/: backend-ci.yml  desktop-ci.yml  native-core-ci.yml
backend/: README.md  config.default.toml  pyproject.toml  requirements.txt  run_server.py
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py
backend/app/services/: ai_service.py  core_adapter.py  image_service.py  preset_service.py  python_pipeline.py
backend/app/utils/: validation.py
backend/data/presets/: natural_clean.json  restrained_cinematic.json
backend/tests/: README.md
core/: CMakeLists.txt  README.md
core/include/imagegpt/: engine.hpp  recipe.hpp  types.hpp
core/python/: __init__.py
core/src/: bindings.cpp  color_management.cpp  engine.cpp  io.cpp  pipeline.cpp  raw.cpp
desktop/: README.md  package-lock.json  package.json  tsconfig.json
desktop/scripts/: build.mjs  check-electron.mjs
desktop/src/main/: main.ts
desktop/src/preload/: preload.ts
desktop/src/renderer/: global.d.ts  index.html  renderer.ts
desktop/src/renderer/styles/: main.css
docs/: architecture.md  limitations.md  pipeline_math.md  roadmap.md  setup.md
samples/metadata/: sample_image_metadata.json
samples/presets/: cool_urban.json  muted_historical.json  warm_portrait.json
schemas/: recipe.schema.json
scripts/: dev.py  test.py
tests/: conftest.py  test_ai_service.py  test_analyze_resilience.py  test_backend_schema_validation.py  test_e2e_jpeg_api.py  test_hsl_mapping.py  test_pipeline_deterministic.py  test_raw_smoke.py  test_tone_curve_monotonicity.py  test_validation_clamping.py
